# ProgrammingTechniques

./: .gitignore
Ex01/: epsilon.cpp  simpson.cpp
Ex02/: CMakeLists.txt  dynamic  dynamic_array.cpp  simpson.hpp  simpson_main.cpp  simpson_method.hpp  static  static_array.cpp
Ex02/simpson/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  simpson_main.cpp  simpson_method.cpp  simpson_method.hpp
Ex02/simpson/src/: CMakeLists.txt  main.cpp  simpson.cpp
Ex03/: Penna.txt  epsilon.hpp  main.cpp
Ex03/src/: epsilon.cpp  epsilon.hpp  main.cpp
Ex04/: z2_group_skeleton.cpp
Ex04/Pb1/src/: CMakeLists.txt  Pb1.cpp
Ex04/Pb2/src/: CMakeLists.txt  Pb2.cpp  simpson.hpp
Ex04/Pb3/: animal.hpp  genome.hpp
Ex05/: CMakeLists.txt  animal-test.cpp  animal.cpp  animal.hpp  bittest.cpp  genome.cpp  genome.hpp
Ex06/Pb1/src/: CMakeLists.txt  Generator.cpp  Generator.hpp  Timer.cpp  Timer.hpp  main.cpp
Ex06/benchmark/benchmark/: CMakeLists.txt
Ex06/benchmark/install/include/: random.hpp
Ex06/benchmark/random/: CMakeLists.txt  random.cpp
Ex06/benchmark/src/: CMakeLists.txt  random.cpp  random.hpp  timer.cpp  timer.hpp
Ex06/benchmark/timer/: CMakeLists.txt
Ex07/: TA_comments.txt
Ex07/Benchmark/: CMakeLists.txt  benchmark.cpp
Ex07/Penna/: CMakeLists.txt  animal.cpp  animal.hpp  genome.cpp  genome.hpp  population.cpp  population.hpp  simulation.cpp
Ex08/: TA_comments.txt
Ex08/Simpson/: CMakeLists.txt  benchmark.hpp  function.hpp  main.cpp  simpson.hpp
Ex08/Simpson_copy_paste/: benchmark.hpp  main.cpp  simpson.hpp
Ex09/: TA_comments.txt  golf.py
Ex10/: main  matrix_multiplication_skeleton.cpp
Ex11/: factory_skeleton.cpp
Ex13/: TA_comments.txt
Ex13/pi_estimation/: CMakeLists.txt  main.cpp
Ex13/random_generator/: CMakeLists.txt  RandomGenerator.hpp  main.cpp
Ex13/simpson_convergence/: Makefile
